SPCTR-2057 Countdown - Fixed CSS breakpoints and tablet defaults for separator and box spacing

--- a/src/blocks/countdown/style.scss
+++ b/src/blocks/countdown/style.scss
@@ -14,7 +14,7 @@
 	&__time {
 		font-size: 52px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 976px) {
 			font-size: 32px;
 		}
 	}
@@ -22,7 +22,7 @@
 	&__label {
 		font-size: 18px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 976px) {
 			font-size: 12px;
 		}
 	}
